<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Lissen</string>
    <string name="a11y_back">Back</string>
    <string name="a11y_menu">Menu</string>
    <string name="a11y_search">Search</string>
    <string name="a11y_clear">Clear</string>
    <string name="a11y_add">Add</string>
    <string name="a11y_settings">Settings</string>
    <string name="a11y_delete_from_cache">Delete from cache</string>
    <string name="a11y_available_offline">Available offline</string>
...
    <string name="continue_playback_shortcut_description">Continue listening</string>
    <string name="offline_cache_is_empty">No saved content yet</string>
    <string name="settings_screen_cached_items_title">Downloads</string>
    <string name="settings_screen_cached_items_hint">Manage saved content</string>
    <string name="volume_boost_disabled">Disabled</string>
    <string name="volume_boost_title">Boosted volume</string>
    <string name="settings_screen_equalizer_title">Equalizer</string>
    <string name="settings_screen_equalizer_enabled">Enabled</string>
    <string name="settings_screen_equalizer_disabled">Disabled</string>
    <string name="equalizer_restore_default">Restore default</string>
    <string name="a11y_equalizer_band">%s hertz band</string>
    <string name="a11y_equalizer_restore">Restore equalizer defaults</string>
    <string name="playing_item_details_time_remaining">Time remaining</string>
    <string name="playback_preferences_title">Playback</string>
    <string name="playback_preferences_description">Volume, seek controls, and audio</string>
    <string name="appearance_preferences_title">Appearance</string>
    <string name="appearance_preferences_description">Color scheme, sorting, and theme</string>
    <string name="settings_screen_advanced_preferences_title">Advanced</string>
    <string name="settings_screen_advanced_preferences_description">Diagnostics, logging, and other options</string>
    <string name="settings_screen_crash_report_title">Crash reporting</string>
...
    <string name="restart_the_app_to_start_using_the_new_codecs_title">Restart the app to start using the new codecs</string>
    <string name="restart_the_app_to_start_using_the_new_codecs_cta">Restart</string>
    <string name="codes_not_supported_warning_toast">Audio format not supported</string>
    <string name="bookmarks_create_bookmark">Create bookmark</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="hide_completed_items">Hide finished</string>
    <string name="application_settings">Application settings</string>
    <string name="tree_node_recent">Recent</string>
    <string name="tree_node_library">Library</string>
    <string name="tree_node_downloads">Downloads</string>
    <string name="tree_node_downloads_offline">Downloads (offline mode)</string>
    <string name="tree_node_root">Root</string>
    <string name="tree_node_all_titles">All titles</string>
...
